# pad-ex01

./: README.md  ex01-report.odt  exercises 1.2 and 1.3.docx
Report/: ex01-report.odt
ex01/: CMakeLists.txt  async.cpp  lambda.cpp  matVec.cpp
